data/all_generated_tests/raw_wast_tests/block_TypeMismatchinControlFlowInstructions_2578.wast
;; 9. **Test Description**:    Develop a block `block` where intermediary instructions incorrectly modify the stack size and type, such as pushing `i64` after an expected `i32`. Validate if both implementations can rectify or flag the error.    **Constraint**: Operand stack states must remain compliant throughout block execution.    **Relation**: Tests dynamic type and stack state integrity within blocks.

(assert_invalid
  (module (func $type-mismatch-within-block
    (block (result i32)
      (i32.const 10)
      (i64.const 20)
    )
  ))
  "type mismatch"
)